--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "scripts": {
         "migrate": "sequelize db:migrate",
-        "start": "set NODE_ENV=development&& nodemon -r dotenv/config src/server.js",
+        "start": "node src/server.js",
+        "dev": "set NODE_ENV=development&& nodemon -r dotenv/config src/server.js",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Gabriel Reis and Igor Melo",
