--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "express": "^4.17.1",
         "express-jwt": "^5.3.3",
         "jwt-simple": "^0.5.6",
-        "mariadb": "^2.3.1",
+        "mysql2": "^2.1.0",
         "node-fetch": "^2.6.0",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
