--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
         "node-fetch": "^2.6.0",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
-        "sequelize": "^5.21.8"
+        "sequelize": "^5.21.8",
+        "sequelize-cli": "^5.5.1"
     },
     "devDependencies": {
-        "nodemon": "^2.0.3",
-        "sequelize-cli": "^5.5.1"
+        "nodemon": "^2.0.3"
     }
 }
