--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "axios": "^0.19.2",
         "bcrypt": "^4.0.1",
         "body-parser": "^1.19.0",
+        "celebrate": "^12.1.1",
         "cors": "^2.8.5",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
