--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
         "migrate": "sequelize db:migrate && sequelize db:seed:all",
         "start": "node src/server.js",
         "dev": "set NODE_ENV=development&& nodemon -r dotenv/config src/server.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "author": "Gabriel Reis and Igor Melo",
     "license": "ISC",
@@ -29,6 +29,8 @@
         "sequelize-cli": "^5.5.1"
     },
     "devDependencies": {
-        "nodemon": "^2.0.3"
+        "jest": "^26.1.0",
+        "nodemon": "^2.0.3",
+        "supertest": "^4.0.2"
     }
 }
