--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,10 +1,8 @@
 name: CI application - master
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 
 jobs:
   build:
@@ -23,6 +21,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: npm ci
     - run: npm install
-    - run: npm run build --if-present
-    
-#    - run: npm test
+    - run: npm run build --if-present  
+    - run: npm test
