--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,4 +1,4 @@
-name: CI application - master
+name: CI Deploy Application
 
 on:
   pull_request:
@@ -22,4 +22,10 @@ jobs:
     - run: npm ci
     - run: npm install
     - run: npm run build --if-present  
-    - run: npm test
+
+    - name: Runnnig Tests
+      run: |
+        touch .env
+        echo ENGINE_API_KEY =${{ secrets.API_SECRET_JWT }} >> .env  
+        npm test
+        rm .env
