--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,14 +19,23 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm install
-    - run: npm run build --if-present  
+    
+    - name: Running CI
+      run: |
+        npm ci
+
+    - name: Running Install
+      run: |
+        npm install
+
+    - name: Running Build
+      run: |
+        npm run build --if-present  
 
     - name: Runnnig Tests
       run: |
         touch .env
-        echo ${{ secrets.API_SECRET_JWT }}
+        cat .env
         echo API_SECRET_JWT =${{ secrets.API_SECRET_JWT }} >> .env  
         npm test
       env:
@@ -34,4 +43,3 @@ jobs:
 
     - name: Removing .env File
       run: rm .env
-
