--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -19,7 +19,7 @@ jobs:
         env:
           DB_USERNAME: root
           DB_PASSWORD: password
-          DB_PASSWORD: test
+          DB_DATABASE: test
           DB_PORT: 3306
           DB_HOST: 127.0.0.1
           MYSQL_ROOT_PASSWORD: password
