--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -39,7 +39,7 @@ jobs:
 
     - name: Check MYSQL connection
         env:
-          PORT: ${{ job.services.mariadb.ports[3306] }}
+          PORT: ${{ job.services.mysql.ports[3306] }}
         run: |
           while ! mysqladmin ping -h"127.0.0.1" -P"$PORT" --silent; do
             echo checking
