--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,15 +17,18 @@ jobs:
       mysql:
         image: mysql:5.7
         env:
-          DB_USERNAME: root
+          DB_USERNAME: user
           DB_PASSWORD: password
           DB_DATABASE: test
           DB_PORT: 3306
-          DB_HOST: 127.0.0.1
-          MYSQL_ROOT_PASSWORD: password
+          DB_HOST: 0.0.0.0
+
+          MYSQL_USER: user
+          MYSQL_PASSWORD: password
           MYSQL_DATABASE: test
+          MYSQL_ROOT_PASSWORD: password
         ports:
-          - 33306:3306
+          - 3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
 
     steps:
