--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,10 +1,8 @@
-name: CI application - master
+name: CI Deploy Application
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
-    branches: [ master ]
+    branches: [ master, develop ]
 
 jobs:
   build:
@@ -15,14 +13,57 @@ jobs:
       matrix:
         node-version: [10.x, 12.x, 14.x]
 
+    services:
+      mysql:
+        image: mysql:5.7
+        env:
+          MYSQL_ROOT_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
+          MYSQL_USER: ${{ secrets.DB_TEST_USERNAME }}
+          MYSQL_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
+          MYSQL_DATABASE: ${{ secrets.DB_TEST_DATABASE }}
+        ports:
+          - 33306:3306
+        options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=3
+
     steps:
-    - uses: actions/checkout@v2
+    - name: Setting Checkout
+      uses: actions/checkout@v2
+
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: npm ci
-    - run: npm install
-    - run: npm run build --if-present
-    
-#    - run: npm test
+
+    - name: Check MYSQL connection
+      env:
+        HOST: ${{ secrets.DB_TEST_HOST }}
+        PORT: ${{ job.services.mysql.ports[3306] }}
+      run: |
+        while ! mysqladmin ping -h"$HOST" -P"$PORT" --silent; do
+          echo checking
+          sleep 1
+        done
+
+    - name: Running CI
+      run: |
+        npm ci
+
+    - name: Running Install
+      run: |
+        npm install
+
+    - name: Running Build
+      run: |
+        npm run build --if-present  
+
+    - name: Runnnig Tests
+      run: |
+        npm run migrate
+        npm test
+      env:
+        DB_USERNAME: ${{ secrets.DB_TEST_USERNAME }}
+        DB_PASSWORD: ${{ secrets.DB_TEST_PASSWORD }}
+        DB_DATABASE: ${{ secrets.DB_TEST_DATABASE }}
+        DB_HOST: ${{ secrets.DB_TEST_HOST }}
+        DB_PORT: ${{ job.services.mysql.ports[3306] }}
+        API_SECRET_JWT: ${{ secrets.API_SECRET_JWT }}
