--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "devDependencies": {
         "jest": "^26.1.0",
         "nodemon": "^2.0.3",
+        "sequelize-mock": "^0.10.2",
         "supertest": "^4.0.2"
     }
 }
