--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "jwt-simple": "^0.5.6",
         "mysql2": "^2.1.0",
         "node-fetch": "^2.6.0",
+        "nodemailer": "^6.4.10",
         "passport": "^0.4.1",
         "passport-jwt": "^4.0.0",
         "sequelize": "^5.21.8",
