--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "description": "API FAZAE",
     "main": "index.js",
     "scripts": {
-        "test": "jest --coverage",
+        "test": "jest",
+        "test:coverage": "jest --coverage",
+        "test:unit": "jest unit",
+        "test:integration": "jest integration",
         "start": "node src/server.js",
         "dev": "set NODE_ENV=development&& nodemon -r dotenv/config src/server.js",
         "documentation": "apidoc -i apidoc/config/ -o apidoc/documentation/",
