--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "caller-id": "^0.1.0",
         "celebrate": "^12.1.1",
         "cors": "^2.8.5",
+        "debug": "^4.1.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-jwt": "^5.3.3",
